--- a/templates/home.html
+++ b/templates/home.html
@@ -128,7 +128,7 @@
                     <div class="carousel-item active boat">
                         <div class="container h-100 d-none d-md-block">
                             <div class="row align-items-center h-100">
-                                <div class="caption animated fadeIn">
+                                <div class="caption animated fadeIn col-10 offset-1">
                                     <h2 class="animated fadeInLeft" style="font-size: 100px;color:white;">
                                         <span style="color: yellow;font-size: 100px;"> I'm </span> Harikrishnan</h2>
                                     <p class="animated fadeInRight" style="font-size: 25px;color:white;">I'm a mobile
@@ -144,7 +144,7 @@
                     <div class="carousel-item sea">
                         <div class="container h-100 d-none d-md-block">
                             <div class="row align-items-center h-100">
-                                <div class="caption animated fadeIn">
+                                <div class="caption animated fadeIn  col-10 offset-1">
                                     <h2 class="animated fadeInLeft" style="font-size:100px;color:white;">I'm an
                                         <span style="color: yellow;font-size: 100px;"> Android
                                             Developer</span>
@@ -500,8 +500,8 @@
     <!--counter-->
     <section class="ftco-section ftco-hireme img margin-top animatable bounceIn" id="contact-section">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-7 ftco-animate text-center">
+            <div class="row justify-content-center d-none d-md-block d-flex">
+                <div class="col-md-6 ftco-animate text-center">
                     <h1 style="
                         text-align: left;
                         font-size: 100px;
